--- a/css/styles.css
+++ b/css/styles.css
@@ -656,6 +656,7 @@ footer {
 }
 
 .contact-container {
+    padding:10px;
     display: flex;
     justify-content: center; /* Center the items horizontally */
     max-width: 1100px; /* Set the maximum width of the container */
@@ -1073,6 +1074,12 @@ footer {
     position: relative;
     max-width: 90%; 
     margin: 0 auto;
+}
+
+.about-container,
+.home-container {
+    margin-left: -20px; /* Compensate for negative margin */
+    margin-right: -20px; /* Compensate for negative margin */
 }
 
 .features {
