padding changes checkout

--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,6 @@ footer {
 }
 
 .contact-container {
-    padding:10px;
     display: flex;
     justify-content: center; /* Center the items horizontally */
     max-width: 1100px; /* Set the maximum width of the container */
@@ -802,7 +801,7 @@ footer {
 .checkout-container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 10px;
+    margin-top: 20px;
 }
 
 .order-summary {
