--- a/css/styles.css
+++ b/css/styles.css
@@ -1167,6 +1167,13 @@ footer {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+@media only screen and (max-width: 500px) {
+    .slideshow-container-review {
+        max-width: 70%; /* Adjust the width as needed */
+    }
+}
+
+
 .slideshow-container1 {
    position: relative;
     width: 50%; /* Adjust width of slideshow container */
