--- a/css/styles.css
+++ b/css/styles.css
@@ -455,6 +455,7 @@ footer {
     justify-content: flex-end;
     font-size: 22px; /* Increase the font size */
     position: relative;
+    background-color: rgba(0, 0, 0, 0.500);
 }
 
 .body-header {
@@ -476,15 +477,17 @@ footer {
 
 .page-numbers a {
     text-decoration: none;
-    color: black;
     padding: 5px 10px; /* Adjust padding to add spacing around the text */
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.500);
+    color:white;
 }
 
 .page-numbers a:hover {
     text-decoration: underline;
-    background-color: #3CB3F5;
+    background-color: rgba(0, 0, 0, 0.200);
     border: none;
+    color: #3CB3F5;
+    transition: color 0.3s ease;
 }
 
 .fade-animation {
@@ -514,7 +517,12 @@ footer {
     margin-bottom: 20px; /* Add margin to the bottom of each product */
     background-color: rgba(0, 0, 0, 0.500);
     color:white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 0 white;
+}
+
+.product:hover{
+    box-shadow: 0 3px 0#3CB3F5;
+    transition: color 0.3s ease;
 }
 
 .product a {
@@ -524,7 +532,8 @@ footer {
 
 .product a:hover {
     text-decoration: none; /* Remove underline on hover */
-    color: inherit; /* Inherit text color on hover */
+    color: #3CB3F5; /* Inherit text color on hover */
+    transition: color 0.3s ease;
 }
 
 .product-row {
@@ -544,8 +553,9 @@ footer {
     margin-top: 20px;
     padding: 10px;
     margin-bottom: 20px; /* Add margin to the bottom of each product */
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.500);
+    box-shadow: 0 3px 0 white;
+    color: white;
     overflow: hidden;
 }
 
@@ -579,7 +589,7 @@ footer {
     margin-bottom: 10px;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .product-container {
         flex-direction: row;
     }
@@ -715,7 +725,7 @@ footer {
     background-position: center; 
     color: #fff; /* Text color */
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 0 white;
     text-decoration: none;
 }
 
@@ -735,7 +745,7 @@ footer {
 #contact-form {
     flex: 1;
     background-color: #fff;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 0 white;
     padding: 20px;
     max-width: 500px;
     margin: 0 auto;
@@ -833,7 +843,7 @@ footer {
     background-color: #f9f9f9;
     padding: 20px;
     margin-bottom: 20px;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 0 white;
     display: flex;
     flex-direction: column;
     gap: 20px; /* Add some spacing between the sections */
@@ -907,6 +917,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color:white;
 }
 
 .checkout-header img {
@@ -946,7 +957,7 @@ footer {
 .checkout-form {
     background-color: #f9f9f9;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 0 white;
     display: flex;
     flex-direction: column;
 }
@@ -1017,7 +1028,7 @@ footer {
 
 .account-form-container {
     background-color: #fff;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 0 white;
     padding: 20px;
     max-width: 500px;
     margin: 0 auto;
@@ -1078,15 +1089,15 @@ footer {
 }
 
 .about-container,
+.commitment-container,
 .home-container,
 .home-container1,
 .dashboard-container {
-    margin-top: 20px;
     padding: 20px;
     text-align: center;
-    margin-bottom: 20px; /* Add margin to the bottom of each product */
+    margin-bottom: 5px; /* Add margin to the bottom of each product */
     background-color: rgba(0, 0, 0, 0.500);
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 0 white;
     overflow: hidden;
     color: #fff;
 }
@@ -1096,14 +1107,8 @@ footer {
 .review-content,
 .dashboard-content {
     position: relative;
-    max-width: 90%; 
+    max-width: 100%; 
     margin: 0 auto;
-}
-
-.about-container,
-.home-container {
-    margin-left: -20px; /* Compensate for negative margin */
-    margin-right: -20px; /* Compensate for negative margin */
 }
 
 .features {
@@ -1140,29 +1145,37 @@ footer {
     font-size: 14px; /* Adjust font size */
 }
 
-.home-container1 {
+.home-container1,
+.home-container,
+.about-container,
+.commitment-container {
     display: flex;
     width: 100%; /* Calculate width including padding */
     margin-left: -20px; /* Compensate for negative margin */
     margin-right: -20px; /* Compensate for negative margin */
 }
 
-.coming-soon {
+.soon-content p {
+    justify-content: center;
+}
+
+.coming-soon,
+.reviews,
+.about-section {
     flex: 1;
     display: flex; /* Use flexbox */
     max-width: 90%; 
     flex-direction: column; /* Arrange items vertically */
-    justify-content: center; /* Center items vertically */
-    text-align: center; /* Center the text content horizontally */
+        text-align: center; /* Center the text content horizontally */
     padding-right: 20px; /* Optional: Add spacing between sections */
 }
 
-.slideshow-container {
+.slideshow-container,
+.slideshow-container1 {
     position: relative;
-    max-width: 90%; /* Adjust the width as needed */
+    width: 50%; /* Adjust the width as needed */
     margin: 0 auto; /* Center the slideshow horizontally */
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
 }
 
 .slideshow-container-review {
@@ -1170,40 +1183,38 @@ footer {
     max-width: 50%; /* Adjust the width as needed */
     margin: 0 auto; /* Center the slideshow horizontally */
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
 }
 
 @media only screen and (max-width: 500px) {
     .slideshow-container-review {
-        max-width: 70%; /* Adjust the width as needed */
+        max-width: 100%; /* Adjust the width as needed */
     }
 }
-
-
-.slideshow-container1 {
-   position: relative;
-    width: 50%; /* Adjust width of slideshow container */
-    margin: 0 auto; /* Center the slideshow horizontally */
-    overflow: hidden;
-}
-
-
 @media only screen and (max-width: 768px),
        only screen and (max-width: 500px) {
-    .home-container1 {
+    .home-container1,
+    .home-container,
+    .about-container {
         /* Adjust layout for smaller screens */
         flex-direction: column; /* Stack items vertically */
         align-items: center; /* Center items horizontally */
     }
 
-    .coming-soon {
+    .coming-soon,
+    .reviews,
+    .about-section {
         /* Adjust layout for smaller screens */
         width: 100% /* Center the content horizontally */
     }
 
-    .slideshow-container1 {
+    .slideshow-container,
+    .slideshow-container1{
         /* Adjust layout for smaller screens */
         width: 100% ; /* Adjust the width as needed */
+    }
+
+    .slideshow-container-review {
+        max-width: 100%; /* Adjust the width as needed */
     }
 }
 
@@ -1240,15 +1251,17 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.25); /* Adjust the opacity as needed */
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
     pointer-events: none; /* Allow clicks to pass through the overlay */
 }
 
-.image-container img,
-.image-container-review img {
+.image-container img {
     width: 100%;
 }
 
+.image-container-review img {
+    width: 60%;
+}
 .textbox {
     border: 1px solid #bbb;
     padding: 10px;
@@ -1263,7 +1276,7 @@ footer {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-100%);
     width: auto;
     padding: 16px;
     color: white;
@@ -1278,6 +1291,48 @@ footer {
 
 .next {
     right: 0;
+}
+
+.prev:hover {
+    color: #3CB3F5;
+    transition: color 0.3s ease;
+}
+
+.next:hover {
+    color: #3CB3F5;
+    transition: color 0.3s ease;
+}
+
+.prev2, 
+.next2 {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-60%);
+    width: auto;
+    padding: 16px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+    user-select: none;
+}
+
+.prev2 {
+    left: 20%;
+}
+
+.next2 {
+    right: 20%;
+}
+
+.prev2:hover {
+    color: #3CB3F5;
+    transition: color 0.3s ease;
+}
+
+.next2:hover {
+    color: #3CB3F5;
+    transition: color 0.3s ease;
 }
 
 .dot-container {
