--- a/css/styles.css
+++ b/css/styles.css
@@ -13,20 +13,19 @@ body {
     padding: 0;
 }
 
-/* Media query for screens smaller than 768px */
 @media (max-width: 768px) {
     body {
-        background-attachment: scroll; /* Removes the fixed background attachment */
+        background-size: auto; /* Adjust the background size for smaller screens */
+        background-position: top center; /* Adjust the background position for smaller screens */
     }
 }
 
 /* Media query for very small screens */
 @media (max-width: 500px) {
     body {
-        background-image: url('../images/background1.jpg'); /* Use the same high-resolution image */
-        background-size: cover; /* Ensure the background covers the entire page */
-        background-position: center; /* Center the background image */
-        background-attachment: scroll; /* Ensures the background scrolls with the content */
+        background-image: url('../images/background.jpg'); /* Use a different image for very small screens */
+        background-size: cover; /* Adjust the background size for very small screens */
+        background-position: center; /* Adjust the background position for very small screens */
     }
 }
 
